# ddsp-realtime

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md
core/: CMakeLists.txt
core/include/ddsp/: DDSPTypes.h  HarmonicSynthesizer.h  InferencePipeline.h  InputUtils.h  MidiInputProcessor.h  NoiseSynthesizer.h  PredictControlsModel.h
core/src/: HarmonicSynthesizer.cpp  InferencePipeline.cpp  MidiInputProcessor.cpp  NoiseSynthesizer.cpp  PredictControlsModel.cpp
docs/: BUILD.md
examples/python-server/: CMakeLists.txt  README.md  build.sh  server-test.py  server.py
examples/python-server/bindings/: bindings.cpp
examples/unity-plugin/: CMakeLists.txt  README.md  build.sh
examples/unity-plugin/src/: DDSPUnityPlugin.cpp  DDSPUnityPlugin.h
models/: README.md
scripts/: setup_deps.sh
